Fix column gap for buttons

--- a/src/pages/RootPage/RootPage.module.less
+++ b/src/pages/RootPage/RootPage.module.less
@@ -137,6 +137,7 @@
 
   @media screen and (max-width: 640px) {
     margin: 0;
+    column-gap: 16px;
   }
 }
 .button {
@@ -199,9 +200,6 @@
   }
   p {
     font: 400 20px var(--font-family-chakra);
-  }
-
-  @media screen and (max-width: 960px) {
   }
 
   @media screen and (max-width: 640px) {
